# ask

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: lib.rs  main.rs
src/ai/: client.rs  mod.rs  response.rs
src/config/: mod.rs
src/history/: mod.rs
src/openai/: client.rs
src/shell/: mod.rs
