[package]
name = "ask"
version = "1.3.0"
edition = "2021"
author = "Damoon Rashidi"

[dependencies]
anyhow = "1.0.79"
inquire = "0.6.2"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_toml = "0.0.1"
simple-home-dir = "0.3.2"
toml = "0.8.8"

[lints.clippy]
all = "deny"
pedantic = "deny"

[lints.rust]
unsafe_code = "deny"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"
unused_import_braces = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
