[package]
name = "ask"
version = "2.0.0"
edition = "2021"
author = "Damoon Rashidi"
description = "Ask tries to understand what shell you're using and then fetches a command specifically for that shell based on your natural language input using ChatGPT."
homepage = "https://damoonrashidi/ask"
license-file = "LICENSE"
keywords = ["shell", "ai", "prompt"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.79"
cliclack = "0.3.5"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_toml = "0.0.1"
simple-home-dir = "0.3.2"
toml = "0.8.8"

[lints.clippy]
all = "deny"
pedantic = "deny"

[lints.rust]
unsafe_code = "deny"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"
unused_import_braces = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
